dbal types for value object

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,9 +19,10 @@ doctrine:
           uuid_binary: Ramsey\Uuid\Doctrine\UuidBinaryType
           App\Domain\User\ValueObject\Uuid: App\Infrastructure\User\ORM\Type\UuidType
           App\Domain\User\ValueObject\Email: App\Infrastructure\User\ORM\Type\EmailType
-          App\Domain\User\ValueObject\HashedPassword: App\Infrastructure\User\ORM\Type\HashedPasswordType
+          App\Domain\User\ValueObject\Auth\HashedPassword: App\Infrastructure\User\ORM\Type\HashedPasswordType
         mapping_types:
           uuid_binary: binary
+          App\Domain\User\ValueObject\Uuid: binary
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
