--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,17 +3,18 @@
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.1/phpunit.xsd"
-         backupGlobals="false"
          colors="true"
          bootstrap="vendor/autoload.php"
 >
     <php>
         <ini name="error_reporting" value="-1" />
-        <env name="KERNEL_CLASS" value="App\Kernel" />
+        <env name="KERNEL_CLASS" value="App\Infrastructure\Kernel" />
         <env name="APP_ENV" value="test" />
         <env name="APP_DEBUG" value="1" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
+        <!-- Deprecations disabled as not breaking the app -->
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
         <!-- define your env variables for the test env here -->
 
         <!-- ###+ php-amqplib/rabbitmq-bundle ### -->
@@ -39,13 +40,13 @@
             <directory>./src/</directory>
             <exclude>
                 <directory>./src/Infrastructure/Share/Migrations/</directory>
-                <file>./src/Kernel.php</file>
+                <file>./src/Infrastructure/Kernel.php</file>
             </exclude>
         </whitelist>
     </filter>
 
     <logging>
-        <log type="coverage-html" target="report/html" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-html" target="report/html" />
     </logging>
 
     <listeners>
