--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,14 +50,16 @@ services:
       - "5672:5672"
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:6.5.4
+    image: docker.elastic.co/kibana/kibana:6.6.1
     ports:
       - 5601:5601
     volumes:
       - "$PWD/etc/dev/kibana/config:/usr/share/kibana/config/kibana.yml"
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
+    environment:
+      - "discovery.type=single-node"
     ports:
       - "9200:9200"
 
