--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,10 +17,9 @@ doctrine:
         server_version: '5.7'
         types:
           uuid_binary: Ramsey\Uuid\Doctrine\UuidBinaryType
-          domain_datetime_immutable: App\Infrastructure\Share\Doctrine\DateTimeType
+          datetime_immutable: App\Infrastructure\Share\Doctrine\DateTimeType
         mapping_types:
           uuid_binary: binary
-          domain_datetime_immutable: datetime_immutable
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
