Add created and updated on the users events (#110)
* - Created a Domain value object and Exception for the DateTime
- Created Doctrine Datetime Type for easy manipulation
- Added created_at and updated_at on user's events and projections
- Added the two fields on the users' table
- Change UserSignedIn factory method in favor of __construct

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,6 +17,7 @@ doctrine:
         server_version: '5.7'
         types:
           uuid_binary: Ramsey\Uuid\Doctrine\UuidBinaryType
+          datetime_immutable: App\Infrastructure\Share\Doctrine\DateTimeType
         mapping_types:
           uuid_binary: binary
     orm:
