--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,8 @@ services:
     command: ['/app/bin/console', 'rabbitmq:multiple-consumer', 'events']
 
   mysql:
-    image: mysql:5.7
+    image: mysql:8
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
     environment:
