--- a/etc/artifact/Dockerfile
+++ b/etc/artifact/Dockerfile
@@ -1,6 +1,5 @@
-ARG PHP_VERION=7.2
-
-FROM jorge07/alpine-php:${PHP_VERION}-dev-sf as builder
+ARG PHP_VERION=7.3.5
+FROM jorge07/alpine-php:${PHP_VERION}-dev as builder
 
 WORKDIR /app
 
