SF 4.2 and PHPunit 8 upgrade patches

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.2",
+        "symfony/translation-contracts": "^1.1",
         "symfony/twig-bundle": "^4.2",
         "symfony/yaml": "^4.2"
     },
