--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "symfony/console": "^4.2",
         "symfony/flex": "^1.2.5",
         "symfony/framework-bundle": "^4.2",
-        "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.2",
         "symfony/translation-contracts": "^1.1",
@@ -77,7 +76,8 @@
     "extra": {
         "symfony": {
             "id": "01C1QKYZ4DSB74RHER7JCF8Q1K",
-            "allow-contrib": false
+            "allow-contrib": false,
+            "require": "^4.2"
         }
     },
     "name": "jorge07/symfony-4-es-cqrs-boilerplate",
