symfony version upgrade to 4.3 + some deprecations warnings fix

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     encoders:
         bcrypt:
-            algorithm: bcrypt
+            algorithm: auto
             cost: 12
     providers:
         users:
