Docker ignore uneeded files

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,10 +2,19 @@ report/
 doc/
 vendor/
 test/
+etc/*
+!etc/artifact/*
 .covertalls.yml
 .env
+.env.local.php
 .styleci.yml
 README.md
 phpstan.neon
 docker-compose*
 .git/
+.php_cs*
+.travis.yml
+depfile.yml
+.idea
+phpunit.xml.dist
+makefile
