--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -22,7 +22,7 @@ doctrine:
           uuid_binary: binary
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
+        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
             Domain:
