--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -21,3 +21,25 @@ services:
 
     old_sound_rabbit_mq.events_producer:
       alias: 'App\Tests\Infrastructure\Share\Event\Publisher\InMemoryProducer'
+
+    App\Infrastructure\Share\Bus\CommandBus:
+      public: true
+      arguments:
+        - '@messenger.bus.command'
+
+    App\Infrastructure\Share\Bus\QueryBus:
+      public: true
+      arguments:
+        - '@messenger.bus.query'
+
+    _instanceof:
+
+        App\Application\Command\CommandHandlerInterface:
+          public: true
+          tags:
+            - { name: messenger.message_handler, bus: messenger.bus.command }
+
+        App\Application\Query\QueryHandlerInterface:
+          public: true
+          tags:
+            - { name: messenger.message_handler, bus: messenger.bus.query }
