--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,24 +1,7 @@
 framework:
     messenger:
-        default_bus: messenger.bus.command
-
-        buses:
-            messenger.bus.command:
-                default_middleware: false
-                middleware:
-                    - handle_message
-
-            messenger.bus.query:
-                default_middleware: false
-                middleware:
-                    - handle_message
-
         transports:
-            # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+            events: "%env(MESSENGER_TRANSPORT_DSN)%"
 
         routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'Messenger\Event\EventInterface': events
