--- a/.env.dist
+++ b/.env.dist
@@ -8,11 +8,6 @@ APP_SECRET=c7375619ac26c8671e52279c31c7f157
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
-
-###> php-amqplib/rabbitmq-bundle ###
-RABBITMQ_URL=amqp://guest:guest@rmq:5672
-###< php-amqplib/rabbitmq-bundle ###
-
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
@@ -21,8 +16,5 @@ JWT_TTL=604800
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rmq:5672
 ###< symfony/messenger ###
