--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -13,12 +13,10 @@ framework:
                 middleware:
                     - handle_message
 
+            messenger.bus.event: ~
+
         transports:
-            # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+            events: "%env(MESSENGER_TRANSPORT_DSN)%"
 
         routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'App\Infrastructure\Share\Event\Event': events
