--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/8.5/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/9.1/phpunit.xsd"
          colors="true"
          bootstrap="vendor/autoload.php"
 >
@@ -16,11 +16,6 @@
         <!-- Deprecations disabled as not breaking the app -->
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled" />
         <!-- define your env variables for the test env here -->
-
-        <!-- ###+ php-amqplib/rabbitmq-bundle ### -->
-        <env name="RABBITMQ_URL" value="amqp://guest:guest@rmq:5672"/>
-        <!-- ###- php-amqplib/rabbitmq-bundle ### -->
-
         <!-- ###+ lexik/jwt-authentication-bundle ### -->
         <env name="JWT_SECRET_KEY" value="%kernel.project_dir%/config/jwt/private.pem"/>
         <env name="JWT_PUBLIC_KEY" value="%kernel.project_dir%/config/jwt/public.pem"/>
@@ -29,10 +24,7 @@
         <!-- ###- lexik/jwt-authentication-bundle ### -->
 
         <!-- ###+ symfony/messenger ### -->
-        <!-- Choose one of the transports below -->
-        <!-- MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages -->
-        <!-- MESSENGER_TRANSPORT_DSN=doctrine://default -->
-        <!-- MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages -->
+        <env name="MESSENGER_TRANSPORT_DSN" value="in-memory://" force="true" />
         <!-- ###- symfony/messenger ### -->
     </php>
 
