Event bus rename

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -13,7 +13,7 @@ framework:
                 middleware:
                     - handle_message
 
-            messenger.bus.event: ~
+            messenger.bus.event.async: ~
 
         transports:
             events: "%env(MESSENGER_TRANSPORT_DSN)%"
