--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.7'
 
 services:
 
@@ -40,6 +40,7 @@ services:
       RABBITMQ_DEFAULT_VHOST: "/"
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
     environment:
       - "discovery.type=single-node"
+      - "cluster.name=sf-events"
