Doc update to Symfony messeger and buses refactor

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -19,4 +19,4 @@ framework:
             events: "%env(MESSENGER_TRANSPORT_DSN)%"
 
         routing:
-            'App\Infrastructure\Share\Event\Event': events
+            'App\Infrastructure\Share\Bus\Event\EventInterface': events
