Helm3 Deps update Logs to Stdout/Stderr

--- a/.env.dist
+++ b/.env.dist
@@ -18,3 +18,6 @@ JWT_TTL=604800
 ###> symfony/messenger ###
 MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rmq:5672
 ###< symfony/messenger ###
+###> doctrine/doctrine-bundle###
+DATABASE_URL=mysql://root:api@mysql:3306/api?serverVersion=8.0
+###< doctrine/doctrine-bundle ###
