--- a/etc/artifact/chart/templates/migrations.yaml
+++ b/etc/artifact/chart/templates/migrations.yaml
@@ -1,29 +1,30 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: batch/v1
+kind: Job
 metadata:
-  name: {{ include "chart.fullname" . }}
+  name: {{ include "chart.fullname" . }}-migrations-{{ date "20060102150405" .Release.Time }}
   labels:
-    app: {{ include "chart.name" . }}
+    app: {{ include "chart.name" . }}-migrations
     chart: {{ include "chart.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    app.kubernetes.io/component: init-migrations
   annotations:
     checksum/secrets-rmq: {{ include (print $.Template.BasePath "/secrets/rabbitmq.yaml") . | sha256sum }}
     checksum/secrets-app: {{ include (print $.Template.BasePath "/secrets/app-secret.yaml") . | sha256sum }}
     checksum/secrets-jwt: {{ include (print $.Template.BasePath "/secrets/jwt.yaml") . | sha256sum }}
     checksum/secrets-mysql: {{ include (print $.Template.BasePath "/secrets/mysql.yaml") . | sha256sum }}
+    helm.sh/hook: "post-install,pre-upgrade"
+    helm.sh/hook-weight: "-5"
+    helm.sh/hook-delete-policy: hook-succeeded
 spec:
-  replicas: {{ .Values.replicaCount }}
-  selector:
-    matchLabels:
-      app: {{ include "chart.name" . }}
-      release: {{ .Release.Name }}
+  activeDeadlineSeconds: 120
   template:
     metadata:
       labels:
-        app: {{ include "chart.name" . }}
+        app: {{ include "chart.name" . }}-migrations
         release: {{ .Release.Name }}
     spec:
+      restartPolicy: Never
       volumes:
       - name: jwt
         secret:
@@ -31,6 +32,7 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.php.repository }}:{{ .Values.image.php.tag }}"
+          command: [ '/app/bin/console', 'd:migrations:migrate', '-n' ]
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
           - name: jwt
@@ -38,25 +40,6 @@ spec:
             readOnly: true
           env:
 {{ tpl (.Files.Get "config/parameters.yaml") . | indent 12 }}
-          ports:
-            - name: fast-cgi
-              containerPort: 9000
-              protocol: TCP
-        - name: {{ .Chart.Name }}-nginx
-          image: "{{ .Values.image.nginx.repository }}:{{ .Values.image.nginx.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-          - name: http
-            containerPort: 80
-            protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /api/healthz
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /api/healthz
-              port: http
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
