--- a/etc/artifact/chart/templates/secrets/mysql.yaml
+++ b/etc/artifact/chart/templates/secrets/mysql.yaml
@@ -9,6 +9,4 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  host: {{ if .Values.mysql.selfHosted }} {{ template "mysqlHost" . }}{{ else }} {{ .Values.parameters.mysql.host | b64enc | quote }}{{ end }}
-  user: {{ if .Values.mysql.selfHosted }} {{ .Values.mysql.mysqlUser | b64enc | quote }}{{ else }} {{ .Values.parameters.mysql.user | b64enc | quote }}{{ end }}
-  pass: {{ if .Values.mysql.selfHosted }} {{ .Values.mysql.mysqlRootPassword | b64enc | quote }}{{ else }} {{ .Values.parameters.mysql.pass | b64enc | quote }}{{ end }}
+  url:  {{ tpl (.Files.Get "config/mysql.url") . | b64enc }}
