--- a/etc/artifact/chart/Chart.yaml
+++ b/etc/artifact/chart/Chart.yaml
@@ -1,5 +1,23 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
 description: DDD CQRS boilerplate
 name: symfony-5-es-cqrs-boilerplate
 version: 0.1.0
+type: application
+dependencies:
+  - name: rabbitmq
+    version: 6.25.2
+    repository: https://charts.bitnami.com/bitnami
+    conditions: rabbitmq.selfHosted
+  - name: traefik
+    version: 1.86.2
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    conditions: traefik.selfHosted
+  - name: mysql
+    version: 1.6.3
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    conditions: mysql.selfHosted
+  - name: elasticsearch
+    version: 7.6.2
+    repository: https://helm.elastic.co
+    conditions: elasticsearch.selfHosted
