--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/messenger": "^5.0",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
+        "symfony/polyfill-php80": "^1.16",
         "symfony/security-bundle": "^5.0",
         "symfony/twig-bundle": "^5.0",
         "symfony/yaml": "^5.0"
@@ -28,14 +29,15 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
         "phpstan/phpstan": "^0.12",
-        "sylius-labs/coding-standard": "^3.1",
         "phpunit/phpunit": "v9.1",
         "roave/security-advisories": "dev-master",
+        "sylius-labs/coding-standard": "^3.1",
         "symfony/browser-kit": "^5.0",
         "symfony/css-selector": "^5.0",
         "symfony/dotenv": "^5.0",
         "symfony/phpunit-bridge": "^5.0",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "vimeo/psalm": "^3.11"
     },
     "config": {
         "preferred-install": {
