feat: log ES requests to specific channel

--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -1,10 +1,16 @@
 monolog:
+    channels: ['elasticsearch']
     handlers:
+        elasticsearch:
+            type: stream
+            path: "%kernel.logs_dir%/elasticsearch_%kernel.environment%.log"
+            level: debug
+            channels: ["elasticsearch"]
         main:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
-            channels: ["!event"]
+            channels: ["!event", "!elasticsearch"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
