--- a/etc/dev/docker-compose.yml
+++ b/etc/dev/docker-compose.yml
@@ -8,6 +8,10 @@ services:
   php:
     ports:
       - "2323:22"
+    volumes:
+      - ./etc/dev/php/docker-xdebug.ini:/etc/php7/conf.d/docker-php-ext-xdebug.ini
+    environment:
+      - PHP_IDE_CONFIG=serverName=es.local
 
   mysql:
     ports:
