--- a/etc/dev/nginx/nginx.conf
+++ b/etc/dev/nginx/nginx.conf
@@ -8,11 +8,13 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    location ~ ^/index\.php(/|$) {
+    location ~ \.php$ {
         fastcgi_pass php:9000;
+        fastcgi_index index.php;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
