feat: use Symfony serializer
This aim to remove Broadway\Serializer\Serializable interface from domain events and allow different output from queries

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -14,3 +14,5 @@ framework:
         log: true
     router:
         strict_requirements: ~
+    serializer:
+        name_converter: 'serializer.name_converter.camel_case_to_snake_case'
