--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/polyfill-php80": "^1.16",
         "symfony/security-bundle": "^5.0",
+        "symfony/serializer": "^5.0",
         "symfony/twig-bundle": "^5.0",
         "symfony/yaml": "^5.0"
     },
