--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,6 +7,8 @@ doctrine:
         types:
           uuid_binary: Ramsey\Uuid\Doctrine\UuidBinaryType
           datetime_immutable: App\Infrastructure\Share\Doctrine\DateTimeType
+          App\Domain\User\ValueObject\Email: App\Infrastructure\User\Doctrine\EmailType
+          App\Domain\User\ValueObject\Auth\HashedPassword: App\Infrastructure\User\Doctrine\HashedPasswordType
         mapping_types:
           uuid_binary: binary
     orm:
