--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,9 @@
 name: pr
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
     - master
@@ -11,15 +14,24 @@ jobs:
     name: Code build, lint and tests
     steps:
     - uses: actions/checkout@v1
+
     - name: Build
       run: make env=ci start;make env=ci wait-for-elastic;make env=ci xoff
+
     - name: DDD LAYERS
       run: make env=ci layer
+
     - name: DB Schema validation
       run: make env=ci schema-validate
+
     - name: Static tools (analyzers)
       run: make env=ci cs-check;make env=ci style;make env=ci layer;make env=ci psalm
+
     - name: Tests
       run: make env=ci xon;make env=ci conf="--coverage-clover build/logs/clover.xml" phpunit
+
     - name: ARTIFACT
       run: make env=ci artifact
+
+    - name: Coveralls
+      run: make env=ci coverage
