--- a/etc/dev/docker-compose.yml
+++ b/etc/dev/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   nginx:
     ports:
       - "80:80"
+
   php:
     ports:
       - "2323:22"
@@ -15,8 +16,6 @@ services:
   mysql:
     ports:
       - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
 
   rmq:
     ports:
@@ -28,7 +27,7 @@ services:
     ports:
       - 5601:5601
     volumes:
-      - ./etc/dev/kibana/config:/usr/share/kibana/config/kibana.yml"
+      - "./etc/dev/kibana/config:/usr/share/kibana/config/kibana.yml"
 
   elasticsearch:
     ports:
