Mount public only into Nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: nginx:1.17-alpine
     volumes:
       - ./etc/dev/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - .:/app:ro
+      - ./public:/app/public:ro
     depends_on:
       - php
 
