--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=c7375619ac26c8671e52279c31c7f157
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
